# src/routers/users.js
@@ -6,6 +6,8 @@ import { validateBody } from '../middlewares/validateBody.js';
 import { updateUserValidationSchema } from '../validation/user.js';
 import { updateCurrentUserController } from '../controllers/users.js';
 
+import { upload } from '../middlewares/upload.js';
+import { updateUserAvatarController } from '../controllers/users.js';
 
 const router = new Router();
 
@@ -17,4 +19,12 @@ router.patch(
   validateBody(updateUserValidationSchema),
   updateCurrentUserController,
 );
+
+router.patch(
+  '/avatar',
+  authorization,
+  upload.single('avatar'),
+  updateUserAvatarController,
+);
+
 export const userRouter = router;
